--- a/Hotel/src/main/resources/templates/reservacion/editarReservacion.html
+++ b/Hotel/src/main/resources/templates/reservacion/editarReservacion.html
@@ -30,12 +30,12 @@
 
                     <div class="col-md-6">
                         <label class="form-label">Fecha Check-in:</label>
-                        <input type="date" th:field="*{fechaCheckin}" class="form-control" required/>
+                        <input type="date" th:field="*{fechaCheckIn}" class="form-control" required/>
                     </div>
 
                     <div class="col-md-6">
                         <label class="form-label">Fecha Check-out:</label>
-                        <input type="date" th:field="*{fechaCheckout}" class="form-control" required/>
+                        <input type="date" th:field="*{fechaCheckOut}" class="form-control" required/>
                     </div>
 
                     <div class="col-md-6">
